--- a/honeyqa/app/build.gradle
+++ b/honeyqa/app/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         applicationId "io.honeyqa.library"
-        minSdkVersion 9
+        minSdkVersion 12
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
@@ -22,4 +22,7 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.0.1'
+    compile 'com.rengwuxian.materialedittext:library:2.1.4'
+    compile 'uk.co.chrisjenx:calligraphy:2.1.0'
+    compile project(':honeyqa-client')
 }
