--- a/honeyqa/app/src/main/AndroidManifest.xml
+++ b/honeyqa/app/src/main/AndroidManifest.xml
@@ -1,8 +1,23 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="io.honeyqa.library">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="io.honeyqa.example">
 
-    <application android:allowBackup="true" android:label="@string/app_name"
-        android:icon="@mipmap/ic_launcher" android:theme="@style/AppTheme">
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    <uses-permission android:name="android.permission.READ_LOGS" />
 
+    <application
+        android:name="io.honeyqa.example.Application"
+        android:allowBackup="true"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:theme="@style/AppTheme">
+        <activity
+            android:name=".MainActivity"
+            android:label="@string/hq">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
